feat(prototype): Giter8 template
Template for creating new Lagom services.

#NONE

--- a/src/main/g8/$name__norm$-impl/src/main/resources/application.conf
+++ b/src/main/g8/$name__norm$-impl/src/main/resources/application.conf
@@ -1,6 +1,10 @@
 #
 #
-play.application.loader = $package$.impl.$name;format="Camel"$Loader
+
+# This usually defaults to 10s, but for the purposes of a sample app, with only one Cassandra node, 1s is much better.
+cassandra-query-journal.eventual-consistency-delay = 1s
+
+play.application.loader = $package$.impl.service.$name;format="Camel"$Loader
 
 $name;format="norm"$.cassandra.keyspace = $name;format="lower,snake,word"$
 
