--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,5 @@
 name = Hello World
+plural_name = $name$s
 organization = com.example
 version = 1.0-SNAPSHOT
 package = $organization$.$name;format="lower,word"$
