--- a/src/main/g8/base64/.travis.yml
+++ b/src/main/g8/base64/.travis.yml
@@ -1,6 +1,6 @@
 sudo: false
 before_script:
- - "echo $JAVA_OPTS"
+ - "echo \$JAVA_OPTS"
  - "export JAVA_OPTS='-Xmx512m -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M'"
 language: scala
 scala:
