feat(prototype): Giter8 template
Template for creating new Lagom services.

#NONE

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,5 +1,5 @@
-name = User
+name = Hello World
 plural_name = $name$s
-organization = com.example.auction
+organization = com.example
 version = 1.0-SNAPSHOT
-package = $organization$.$name;format="lower,word"$
+package = $organization$.$name;format="camel"$
