feat(prototype): Giter8 template
Put API into a single scala file.

#NONE

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -2,4 +2,4 @@ name = Hello World
 plural_name = $name$s
 organization = com.example
 version = 1.0-SNAPSHOT
-package = $organization$.$name;format="camel"$
+package = $organization$.$name;format="lower,word"$
