feat(prototype): Giter8 template
Implementation resources

#NONE

--- a/src/main/g8/$name__norm$-impl/src/main/resources/application.conf
+++ b/src/main/g8/$name__norm$-impl/src/main/resources/application.conf
@@ -4,7 +4,11 @@
 # This usually defaults to 10s, but for the purposes of a sample app, with only one Cassandra node, 1s is much better.
 cassandra-query-journal.eventual-consistency-delay = 1s
 
+play.http.secret.key = putSomeStrongSecretHere
+
 play.application.loader = $package$.impl.service.$name;format="Camel"$Loader
+
+akka.actor.enable-additional-serialization-bindings = on
 
 $name;format="norm"$.cassandra.keyspace = $name;format="lower,snake,word"$
 
