feat(prototype): Giter8 template
Clean up

#NONE

--- a/src/main/g8/$name__norm$-impl/src/main/resources/application.conf
+++ b/src/main/g8/$name__norm$-impl/src/main/resources/application.conf
@@ -6,7 +6,7 @@ cassandra-query-journal.eventual-consistency-delay = 1s
 
 play.http.secret.key = putSomeStrongSecretHere
 
-play.application.loader = $package$.impl.service.$name;format="Camel"$Loader
+play.application.loader = $package$.impl.$name;format="Camel"$ApplicationLoader
 
 akka.actor.enable-additional-serialization-bindings = on
 
