feat(prototype): perl program to generate code for schema definitions
perl program

#AMDAP-9

--- a/src/main/g8/$name__norm$.yml
+++ b/src/main/g8/$name__norm$.yml
@@ -1,7 +1,9 @@
 ---
 events:
   | $name;format="Camel"$Created
+  | $name;format="Camel"$Deleted
   | $name;format="Camel"$Archived
+  | $name;format="Camel"$Unarchived
 paths:
   | "/api/$plural_name;format="lower,hyphen"$": create$name;format="Camel"$
   |
