feat(prototype): perl program to generate code for schema definitions
perl program

#AMDAP-9

--- a/src/main/g8/$name__norm$.yml
+++ b/src/main/g8/$name__norm$.yml
@@ -1,6 +1,8 @@
 ---
 scalar_types:
   $name;format="Camel"$Id: String @check("[a-zA-Z0-9\-\.\_\~]{1,128}")
+  Name: String @check("[a-zA-Z0-9\-\.\_\~]{1,128}")
+  Description: String @check(".{1,2048}")
 events:
   | $name;format="Camel"$Created
   | $name;format="Camel"$Deleted
