--- a/src/main/g8/identity-impl/src/main/resources/application.conf
+++ b/src/main/g8/identity-impl/src/main/resources/application.conf
@@ -4,14 +4,14 @@
 play.crypto.secret = "66ztrd875ZT6755%TEWHt3%kjG;%8753Fhje%%)0khestshq4823528%(/8(82rtzeiwstsAKRHAEJ%4"
 play.http.session.maxAge = 1m
 
-play.application.loader = io.digitalcat.publictransportation.services.identity.impl.IdentityLoader
+play.application.loader = $organization$.identity.impl.IdentityLoader
 
 identity.cassandra.keyspace = identity
 
-cassandra-journal.keyspace = ${identity.cassandra.keyspace}
-cassandra-snapshot-store.keyspace = ${identity.cassandra.keyspace}
-lagom.persistence.read-side.cassandra.keyspace = ${identity.cassandra.keyspace}
+cassandra-journal.keyspace = \${identity.cassandra.keyspace}
+cassandra-snapshot-store.keyspace = \${identity.cassandra.keyspace}
+lagom.persistence.read-side.cassandra.keyspace = \${identity.cassandra.keyspace}
 
-jwt.secret = "4jkdgf4JHF38/385kjghs#$#(-.gdgk4498Q(gjgh3/3jhgdf,.,24#%8953+'8GJA3gsjjd3598#%(/$.,-Kjg#%$#64jhgskghja"
+jwt.secret = "4jkdgf4JHF38/385kjghs#\$#(-.gdgk4498Q(gjgh3/3jhgdf,.,24#%8953+'8GJA3gsjjd3598#%(/\$.,-Kjg#%\$#64jhgskghja"
 jwt.token.auth.expirationInSeconds = 300
 jwt.token.refresh.expirationInSeconds = 86400
