--- a/src/main/g8/identity-impl/src/main/resources/application.conf
+++ b/src/main/g8/identity-impl/src/main/resources/application.conf
@@ -1,6 +1,10 @@
 #
 # Copyright (C) 2016 Lightbend Inc. <http://www.lightbend.com>
 #
+
+# This usually defaults to 10s, but for the purposes of a sample app, with only one Cassandra node, 1s is much better.
+cassandra-query-journal.eventual-consistency-delay = 1s
+
 play.crypto.secret = "66ztrd875ZT6755%TEWHt3%kjG;%8753Fhje%%)0khestshq4823528%(/8(82rtzeiwstsAKRHAEJ%4"
 play.http.session.maxAge = 1m
 
@@ -13,5 +17,5 @@ cassandra-snapshot-store.keyspace = \${identity.cassandra.keyspace}
 lagom.persistence.read-side.cassandra.keyspace = \${identity.cassandra.keyspace}
 
 jwt.secret = "4jkdgf4JHF38/385kjghs#\$#(-.gdgk4498Q(gjgh3/3jhgdf,.,24#%8953+'8GJA3gsjjd3598#%(/\$.,-Kjg#%\$#64jhgskghja"
-jwt.token.auth.expirationInSeconds = 300
+jwt.token.auth.expirationInSeconds = 3600
 jwt.token.refresh.expirationInSeconds = 86400
