feat(template): add authz
Modify https://github.com/rdwinter2/lagom-scala.g8 to add authorization checks to calls

#AMDAP-10

--- a/src/main/g8/$name__norm$-impl/src/main/resources/application.conf
+++ b/src/main/g8/$name__norm$-impl/src/main/resources/application.conf
@@ -34,6 +34,6 @@ akka.actor.serialization-bindings {
 }
 
 
-jwt.secret = "4jkdgf4JHF38/385kjghs#$#(-.gdgk4498Q(gjgh3/3jhgdf,.,24#%8953+'8GJA3gsjjd3598#%(/$.,-Kjg#%$#64jhgskghja"
+jwt.secret = "4jkdgf4JHF38/385kjghs#\$#(-.gdgk4498Q(gjgh3/3jhgdf,.,24#%8953+'8GJA3gsjjd3598#%(/\$.,-Kjg#%\$#64jhgskghja"
 jwt.token.auth.expirationInSeconds = 3600
 jwt.token.refresh.expirationInSeconds = 86400
